internal/xds/translator/testdata/out/xds-ir/credential-injection-backend-filter.routes.yaml
- ignorePortInHostMatching: true
  name: envoy-gateway/gateway-1/http
  virtualHosts:
  - domains:
    - '*'
    metadata:
      filterMetadata:
        envoy-gateway:
          resources:
          - kind: Gateway
            name: gateway-1
            namespace: envoy-gateway
            sectionName: http
    name: envoy-gateway/gateway-1/http/*
    routes:
    - match:
        pathSeparatedPrefix: /foo
      metadata:
        filterMetadata:
          envoy-gateway:
            resources:
            - kind: HTTPRoute
              name: httproute-1
              namespace: default
      name: httproute/default/httproute-1/rule/1/match/0/*
      route:
        upgradeConfigs:
        - upgradeType: websocket
        weightedClusters:
          clusters:
          - name: httproute/default/httproute-1/rule/1/backend/0
            weight: 2
          - name: httproute/default/httproute-1/rule/1/backend/1
            requestHeadersToAdd:
            - appendAction: OVERWRITE_IF_EXISTS_OR_ADD
              header:
                key: add-header-3
                value: some-value
            weight: 1
